# disperse-collect-api

./: .env.example  Cargo.toml  README.MD
abi/: DisperseCollect.json
src/: config.rs  contracts.rs  dto.rs  lib.rs  main.rs  routes.rs  service.rs  state.rs
