[package]
name = "disperse-collect-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2.1", features = ["full", "serde"] }
anyhow = "1.0.86"
axum = "0.7.5"
config = "0.14.0"
derive-getters = "0.5.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.206", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
